Update documentation of new SPICE module

--- a/examples/cpv_grid_spice_example.ipynb
+++ b/examples/cpv_grid_spice_example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Grid Simulation of a Concentrator Solar Cell\n",
     "\n",
-    "This example, walksthrough the how to use the classes and function in `solcore.spice` to simulate different grid structures of concentrator solar cell. We are going to preproduce some of the figures published by Steiner et al. [1]\n",
+    "This example walks through how to use the classes and functions in `solcore.spice` to simulate different grid structures of concentrator solar cells. We are going to preproduce some of the figures published by Steiner et al. [1]\n",
     "\n",
     "## References\n",
     "[1] M. Steiner et al., Validated front contact grid simulation for GaAs solar cells under concentrated sunlight, Progress in Photovoltaics, Volume 19, Issue 1, January 2011, Pages 73-83. DOI: 10.1002/pip.989\n"
@@ -23,16 +23,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/crystals.py:8: SyntaxWarning: invalid escape sequence '\\G'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/sopra_db.py:80: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/sopra_db.py:90: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/sopra_db.py:196: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/sopra_db.py:284: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/adachi_alpha.py:61: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/absorption_calculator/adachi_alpha.py:63: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/light_source/smarts.py:64: SyntaxWarning: invalid escape sequence '\\/'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/material_system/material_system.py:433: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/sesame_drift_diffusion/solve_pdd.py:354: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/units_system/units_system.py:45: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/units_system/units_system.py:46: SyntaxWarning: invalid escape sequence '\\+'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The RCWA solver will not be available because an S4 installation has not been found.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dan/Dropbox/Exciton Labs Ltd/Clients/UNSW/solcore5/.mesonpy/editable/install/Users/dan/.pyenv/versions/3.12.2/lib/python3.12/site-packages/solcore/registries.py:73: UserWarning: Optics solver 'RCWA' will not be available. An installation of S4 has not been found.\n",
+      "  warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16808ecf0>"
+       "<matplotlib.image.AxesImage at 0x1435b6360>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -67,7 +100,7 @@
     "\n",
     "The metalisation does not extend all the way to the edges of the solar cell, this offset is specfied by `offset_px`, in this case 3 pixels.\n",
     "\n",
-    "Grid fingers are always equally spaced, the number and width of grid fingers is specified by an array of pixel widths, this is a required argument. In this case there six finger all of width 4 pixels.\n",
+    "Grid fingers are always equally spaced; the number and width of grid fingers are specified by an array of pixel widths; this is a required argument. In this case, there six finger all of width 4 pixels.\n",
     "\n",
     "The size of the image is specified by the `nx` and `ny` which sets the number of pixels in the x and y directions, respectively.\n",
     "\n",
@@ -80,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +128,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +194,12 @@
    "source": [
     "## Colour scheme convention\n",
     "\n",
-    "The colors in the image have specific meaning to the solcore:\n",
-    "\n",
+    "The colors in the image hold a specific meaning for Solcore:\n",
     "* White is a bus bar\n",
     "* Gray is a grid finger (50%)\n",
     "* Black is an absence of any metal\n",
     "\n",
-    "In code to follow, we will be sweeping out an IV curve for this solar cell. The distinction between bus bar and grid finger is that former is connect directly to the bias voltage source that is sweep to calculate the characteristic curve."
+    "In the code to follow, we will be sweeping out an IV curve for this solar cell. The distinction between a bus bar and a grid finger is that former is connect directly to the bias voltage source that is sweep to calculate the characteristic curve."
    ]
   },
   {
@@ -176,7 +208,7 @@
    "source": [
     "# Create a netlist\n",
     "\n",
-    "A netlist describes the elements and connections between them in the SPICE simulation. We are going to use the helper function to generate this netlist for us given some high-level input parameters that describe our the solar cell.\n",
+    "In the SPICE simulation, a netlist describes the elements and connections between them. We are going to use the helper function to generate this netlist for us, given some high-level input parameters that describe the solar cell.\n",
     "\n",
     "The basic structure of the function we will use looks like this,\n",
     "\n",
@@ -191,22 +223,22 @@
     "    )\n",
     "```\n",
     "\n",
-    "We have already seen the first argument `grid` let's take a look at the others.\n",
+    "We have already seen the first argument, `grid`. Let's take a look at the others.\n",
     "\n",
-    "The `illumination_map` is a 2D array, the same size and grid image, that contains relative intensity of illumination across the surface of the solar cell. A value of 1 means the intensity is at maximum value, and value of zero means no illumination intensity at all. Moreover, to simulate entirely uniform illumination we just need to create an array of ones.\n",
+    "The `illumination_map` is a 2D array of the same size and grid image that contains the relative intensity of illumination across the solar cell's surface. A value of 1 indicates that the intensity is at its maximum, whereas a value of zero indicates that there is no illumination intensity at all. Furthermore, to simulate entirely uniform illumination, we just need to create an array of one.\n",
     "\n",
     "```python\n",
     "    import numpy as np\n",
     "    illumination_map = np.ones((nx, ny))\n",
     "```\n",
     "\n",
-    "The next argument is size, this is a tuple of width (x-direction) and length (y-direction) of solar cell. Here, the solar cell we want to simulate is approximately 3mm by 3mm, therefore,\n",
+    "The next argument is size; this is a tuple of the width (x-direction) and length (y-direction) of a solar cell. Here, the solar cell we want to simulate is approximately 3mm by 3mm, therefore,\n",
     "\n",
     "```python\n",
     "size = (0.003, 0.003)  # specifc size this in meters\n",
     "```\n",
     "\n",
-    "Finally, junctions is list of Python dictionaries containing information about each junciton in the solar cell,\n",
+    "Finally, junctions is a list of Python dictionaries containing information about each junction in the solar cell.\n",
     "\n",
     "```python\n",
     "    junctions = [\n",
@@ -223,22 +255,22 @@
     "```\n",
     "\n",
     "The parameters are:\n",
-    "   * `jsc`, the short-circuit current generate by the junction in A / m2.\n",
-    "   * `emitter_sheet_resistance` the sheet resistance of the emitter region in Ohm per square.\n",
-    "   * `j01`, the saturation current density in neutral region in A / m2.\n",
-    "   * `j02`, the saturation current density in the bulk region in A / m2.\n",
-    "   * `Eg`, the bandgap of the material in eV (this one is no SI units!).\n",
-    "   * `n1`, the ideality factor of the `j01` diode, default is 1.\n",
-    "   * `n2`, the ideality factor of the `j02` diode, default is 2.\n",
+    "  - `jsc`, the short-circuit current generated by the junction in A / m2.\n",
+    "  - `emitter_sheet_resistance`, the sheet resistance of the emitter region in Ohm per square.\n",
+    "  - `j01`, the saturation current density in the neutral region in A / m2.\n",
+    "  - `j02`, the saturation current density in the bulk region in A / m2.\n",
+    "  - `Eg`, the bandgap of the material in eV (this one is no SI units!).\n",
+    "  - `n1`, the ideality factor of the `j01` diode, default is 1.\n",
+    "  - `n2`, the ideality factor of the `j02` diode, default is 2.\n",
     "\n",
-    "Note a shunt resistance is not currently included in this modelling because it is aimed a concentrator solar cells and so large as to be ignoreable.\n",
+    "Note that shunt resistance is not currently included in this modelling because for concentrator solar cells and is so large as to be negligible.\n",
     "\n",
     "Let's actually generate the netlist."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,16 +337,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can seet the netlist is just a string. The detail of the netlist are not important for this tutorial, so we will move on.\n",
+    "As you can see, the netlist is just a string. The details of the netlist are not important for this tutorial, so we will move on.\n",
     "\n",
     "# Solve the netlist\n",
     "\n",
-    "SPICE must digest the netlist and solve it. The result is voltages at all nodes and current through all elements. We need to specific a voltage range and step size when calling the solver function. Note, depending on the size of the netlist this could take varying amount of time to solve. At the time of writing this take about a minute on a modern laptop."
+    "SPICE must digest and solve the netlist. The result is voltage at all nodes and current through all elements. We need to specify a voltage range and step size when calling the solver function. It may take time to solve this depending on the netlist size. It took me about a minute on a modern laptop to run this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,13 +363,8 @@
    "source": [
     "# Getting useful data from the result object\n",
     "\n",
-    "A result is returned which can be passed to helper function to get the information we want, these can be found in the module `solcore.spice.result`. Let's import the functions to help get and plot the IV curve."
+    "A result is returned, which can be passed to the helper function to get the information we want; these can be found in the module `solcore.spice.result`. Let's import the functions to assist in obtaining and plotting the IV curve."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -348,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,14 +433,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here `vmax` and `pmax` are the voltage and power at the maximum power point. \n",
+    "Here `vmax` and `pmax` are the voltage and power at the maximum power point, respectively.\n",
     "\n",
-    "`maxidx` is the index in bias voltage array the corresponds to the maximum power points. For example,"
+    "`maxidx` is the index in the bias voltage array that corresponds to the maximum power points. For example,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +449,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,12 +464,12 @@
    "source": [
     "## Layer voltages\n",
     "\n",
-    "We can make nice plots of surface voltages using the following functions,"
+    "We can make nice plots of surface voltages using the following functions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +478,7 @@
        "(120, 120, 3, 161)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,12 +494,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here `voltages` is a 3 + 1 dimensional array. The first three dimensions correspond to the physical x, y, z location in the discretisation and the last dimension corresponds to the number of steps in the voltage sweep.\n",
+    "Here, `voltages` is a 3 + 1 dimensional array. The first three dimensions correspond to the physical x, y, and z locations in the discretization, and the last dimension corresponds to the number of steps in the voltage sweep.\n",
     "\n",
-    "The first z index is the metal layer, the second z index is the pv (emitter) layer and the third is the base and buffer layer.\n",
+    "The first z index is the metal layer, the second z index is the PV (emitter) layer, and the third is the base and buffer layers.\n",
     "\n",
-    "The helper function plots both the metal and the pv layer voltages."
+    "The helper function plots both the metal and PV layer voltages."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -481,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -504,12 +545,12 @@
    "metadata": {},
    "source": [
     "# Electroluminescence prediction\n",
-    "We can make a prediction of the electroluminescene distribution emitter by the solar cells using the following helper functions,"
+    "We can make a prediction of the electroluminescene distribution emitted by the solar cells using the following helper functions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -536,14 +577,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A more detailed example using solcore to calculate the short-circuit current\n",
+    "The `is_metal` argument is optional, but it improves the prediction by reduce emission from regions containing metal to zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A more detailed example using Solcore to calculate the short-circuit current\n",
     "\n",
-    "Let's create a solcore solar cell model based on the solar cell structure above and get it to calculate the short-circuit current."
+    "Let's create a Solcore solar cell model based on the solar cell structure above and get it to calculate the short-circuit current."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +609,7 @@
        "32491.025503548084"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,12 +663,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make a second function that wraps the SPICE model and returns efficiency of the device. Inside this function it calls solcore to estimate the JSC."
+    "Create a second function that wraps the SPICE model and returns the device's efficiency. Inside this function, it calls solcore to estimate the JSC."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,12 +723,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's loop over a few concentration values to see if we can plot a concentration vs efficiency plot."
+    "Finally, let's loop over a few concentration values to see if we can plot a concentration vs. efficiency plot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
